Fixed new course response error. Increase brightness when launching. Added location and scale iOS map controls.

--- a/Sources/SailTac/Resources/Localizable.xcstrings
+++ b/Sources/SailTac/Resources/Localizable.xcstrings
@@ -342,6 +342,16 @@
     "Port Distance" : {
 
     },
+    "Position: %lfº, %lfº" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Position: %1$lfº, %2$lfº"
+          }
+        }
+      }
+    },
     "Powered by %@" : {
       "localizations" : {
         "es" : {
